--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,44 @@
+.inputSection {
+	color: rgb(50, 50, 50);
+	margin: 5rem auto;
+	width: 50%;
+}
+
 .userInput {
+	background-color: rgb(183, 116, 246);
+	color: rgb(49, 2, 49);
+	padding: 1rem;
+}
+
+.inputField {
+	padding: 1rem;
 	display: flex;
 	flex-direction: column;
-	background-color: white;
-	color: rgb(50, 50, 50);
-	margin: 2rem auto;
-	padding: 1rem;
-	width: 80%;
+
+	font-weight: 700;
+	font-size: 1.3rem;
+}
+
+.inputField label {
+	margin: 0 3rem;
+}
+
+.inputField input {
+	margin: 0.5rem auto;
+	padding: 0.5rem;
+	font-family: inherit;
+	width: 90%;
+}
+
+.button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.button button {
+	padding: 0.5rem 1rem;
+	width: 250px;
+	height: 50px;
+	font-size: 1.5rem;
 }
