--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,7 @@
 html {
 	background-color: rgb(50, 50, 50);
+	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+		"Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 body {
 	margin: 0;
